objects/Compliance_Finding__c.object
<CustomObject>
    <description>This object stores the individual findings of a Compliance Scan.  It is a junction object between the Compliance Scan and the Compliance Rule for which the findings have been found.</description>
    <fields>
        <fullName>Compliance_Rule__c</fullName>
        <label>Compliance Rule</label>
        <referenceTo>Compliance_Rule__c</referenceTo>
        <relationshipName>Compliance_Incidences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Compliance_Scan_Result__c</fullName>
        <label>Compliance Scan Result</label>
        <referenceTo>Compliance_Scan_Result__c</referenceTo>
        <relationshipLabel>Compliance Findings</relationshipLabel>
        <relationshipName>Compliance_Findings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rule_Error_Message__c</fullName>
        <description>This field is populated with error message from its Compliance Rule Error Message</description>
        <label>Rule Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <formula>TEXT(Compliance_Rule__r.Severity__c)</formula>
        <label>Severity</label>
        <type>Text</type>
    </fields>
    <label>Compliance Finding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Compliance_Rule__c</columns>
        <columns>Compliance_Scan_Result__c</columns>
        <columns>Severity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{000000000}</displayFormat>
        <label>Compliance Finding Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Findings</pluralLabel>
    <recordTypes>
        <fullName>Copado</fullName>
        <active>true</active>
        <description>This record type is used for scan findings produced by Copado.</description>
        <label>Copado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Use this record type to capture non-Salesforce scan findings.</description>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>